# screen-ocr

./: README.md  architecture.mermaid  main.py  ocr_engine.py  pyproject.toml  roi_selector.py  utils.py  video_processor.py
tests/: test_ocr_simple.py  test_roi_selector.py
